[project]
name = "rememberizer-mcp-us-patent-ck"
version = "0.1.4"
description = "This Common Knowledge contains US patent data sourced from the Google Patents Public Datasets. The dataset includes bibliographic information and full-text data for US patents spanning from January 1, 2000 through November 2024, provided by IFI CLAIMS Patent Services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Rememberizer"
email = "support@rememberizer.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_rememberizer"]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
rememberizer-mcp-us-patent-ck = "mcp_server_rememberizer:main"

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 118
